# DoodleJump

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Documentation/: DoxyFile
Report/: report.tex
Src/AssetManager/: FontManager.cpp  FontManager.h  TextureManager.cpp  TextureManager.h
Src/Configs/: GameConfig.h
Src/Control/: BGTileGenerator.cpp  BGTileGenerator.h  BonusGenerator.cpp  BonusGenerator.h  ObstacleGenerator.cpp  ObstacleGenerator.h  PlatformGenerator.cpp  PlatformGenerator.h  World.cpp  World.h
Src/Events/: Event.h  EventHandler.cpp  EventHandler.h  KeyPressEvent.cpp  KeyPressEvent.h  SpaceKeyEvent.cpp  SpaceKeyEvent.h  WindowCloseEvent.cpp  WindowCloseEvent.h
Src/Exceptions/: Exception.h  FileLoadException.h  FontLoadException.h  InitializeException.h  TextureLoadException.h
Src/Model/: AEntityFactory.h  BGTile.cpp  BGTile.h  Bonus.cpp  Bonus.h  Camera.cpp  Camera.h  Entity.cpp  Entity.h  Observer.h  Obstacle.cpp  Obstacle.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Random.cpp  Random.h  Score.cpp  Score.h  Stopwatch.cpp  Stopwatch.h  Subject.h
Src/StatePattern/: JetpackState.cpp  JetpackState.h  PlayerState.h  SpringState.cpp  SpringState.h  SuctionState.cpp  SuctionState.h
Src/View/: BGTileView.cpp  BGTileView.h  BonusView.cpp  BonusView.h  CEntityFactory.cpp  CEntityFactory.h  EntityView.cpp  EntityView.h  Game.cpp  Game.h  ObstacleView.cpp  ObstacleView.h  PlatformView.cpp  PlatformView.h  PlayerView.cpp  PlayerView.h  ScoreView.cpp  ScoreView.h
